#feature/PN-5140: Added Enum NotificationChannelType and updated toList to Java 17 syntax